# SNN-STDP-Visualizer

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: Net.cpp  Net.h  NetworkVisualizer.cpp  NetworkVisualizer.h  Neuron.cpp  Neuron.h  SmallDatatypes.h  Synapse.cpp  Synapse.h  main.cpp
tests/: test_net.cpp  test_neuron.cpp  test_synapse.cpp
